# TransformerX

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  data_loader.py  main.py  pyproject.toml  requirements.txt  setup.py  test_main.py  utils.py
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  feature_request.md  subtask-template.md
.github/workflows/: ci.yml  python-package.yml  python-publish.yml
docs/source/: conf.py  index.rst  modules.rst  transformerx.data_loader.rst  transformerx.layers.addnorm.rst  transformerx.layers.dot_product_attention.rst  transformerx.layers.masks.global_attention_mask.rst  transformerx.layers.masks.rst  transformerx.layers.multihead_attention.rst  transformerx.layers.positional_encoding.rst  transformerx.layers.positionwise_ffn.rst  transformerx.layers.rst  transformerx.layers.transformer_decoder.rst  transformerx.layers.transformer_decoder_block.rst  transformerx.layers.transformer_encoder.rst  transformerx.layers.transformer_encoder_block.rst  transformerx.rst  transformerx.training.base.rst  transformerx.training.rst  transformerx.txplot.plot_pe.rst  transformerx.txplot.rst  transformerx.utils.rst
examples/: encoder_only_classifier.py  encoder_only_simple.py  eng2fr_translation.py
layers/: addnorm.py  dot_product_attention.py  multihead_attention.py  positional_encoding.py  positionwise_ffn.py  transformer_decoder.py  transformer_decoder_block.py  transformer_encoder.py  transformer_encoder_block.py
tests/: test_main.py
tests/layers/: test_addnorm.py  test_dot_product_attention.py  test_multihead_attention.py  test_positional_encoding.py  test_positionwise_ffn.py  test_transformer_decoder.py  test_transformer_decoder_block.py  test_transformer_encoder.py  test_transformer_encoder_block.py
training/: base.py
transformerx/: __backends__.py  __version__.py  utils.py
transformerx/layers/: __init__.py  addnorm.py  dot_product_attention.py  multihead_attention.py  positional_encoding.py  positionwise_ffn.py  transformer_decoder.py  transformer_decoder_block.py  (+2 more)
txplot/: plot_pe.py
(+18 files in other folders)
